# nexora-desktop

./: .env.example  .gitignore  .prettierignore  ANTIGRAVITY-GUIA.md  Abrir-Antigravity.ps1  BOUNDARIES.md  CHANGELOG.md  CLAUDE-CODE-TASKS.md  CLAUDE.md  PROGRESS-DESKTOP.md  Plano — Bugs + Gap Analysis Nexora Desktop.md  README-DESKTOP.md  README.md  SYNC-STATE.md  eslint.config.js  index.html  nexora-desktop-documento.md  nexora-desktop.code-workspace  package-lock.json  package.json  release-notes-v0.24.0.md  vite.config.ts  vitest.config.ts
.antigravity/: rules.md  settings.json
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
docs/: FUNCTIONS.md  INSTALL.md  LICENSE.md  RELEASE.md  SCREEN_GUIDE.md  USER_MANUAL.md
guia/: Prompt Melhorado para Nexora Media Processing — Desktop Nativo - Antigravity.md  Prompt Melhorado para Nexora Media Processing — Desktop Nativo - Claude.md  nexora-desktop-guia-execucao.md
scripts/: 0.20.0.txt  01-migrate-workspace.ps1  02-setup-claude-env.ps1  03-setup-antigravity-env.ps1  04-setup-github.ps1  05-validate-environment.ps1  06-run-dev.ps1  add-6-keys.cjs  add-i18n-keys.cjs  add-i18n-v019.cjs  add-show-all-keys.cjs  sync.sh  (+16 more)
src-tauri/: -  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/vmaf_models/: vmaf_v0.6.1.json
src-tauri/src/: lib.rs  logger.rs  main.rs  queue.rs  sidecar.rs  state.rs  tray.rs
src-tauri/src/commands/: assets.rs  jobs.rs  logs.rs  metrics.rs  mod.rs  profiles.rs  settings.rs  system.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.sql
(+105 files in other folders)
