[package]
name = "nexora-desktop"
version = "0.20.0"
description = "Nexora Media Processing - Desktop Native"
authors = ["Nexora"]
edition = "2021"

[lib]
name = "nexora_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1"
sysinfo = { version = "0.32", default-features = false, features = ["system", "network"] }
tokio = { version = "1", features = ["time", "sync"] }
walkdir = "2"
